--- a/index.html
+++ b/index.html
@@ -251,6 +251,7 @@
   </template>
 
   <script src="js/data.js"></script>
+  <script src="js/backend.js"></script>
   <script src="js/card.js"></script>
   <script src="js/pin.js"></script>
   <script src="js/form.js"></script>
