Исправления после первой проверки

--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
           <label class="ad-form__label">Фотография жилья</label>
           <div class="ad-form__photo-container">
             <div class="ad-form__upload">
-              <input type="file" id="images" name="images" class="ad-form__input visually-hidden" accept="image/png, image/jpeg, image/jpg, image/gif" multiple>
+              <input type="file" id="images" name="images" class="ad-form__input visually-hidden" accept="image/png, image/jpeg, image/jpg, image/gif">
               <label for="images" class="ad-form__drop-zone">Загрузить<br>фото...</label>
             </div>
             <div class="ad-form__photo"></div>
@@ -250,15 +250,16 @@
     </div>
   </template>
 
+  <script src="js/debounce.js"></script>
   <script src="js/data.js"></script>
-  <script src="js/card.js"></script>
-  <script src="js/filter.js"></script>
-  <script src="js/pin.js"></script>
+  <script src="js/message.js"></script>
+  <script src="js/cardmodule.js"></script>
+  <script src="js/filtermodule.js"></script>
+  <script src="js/pinmodule.js"></script>
   <script src="js/avatar.js"></script>
-  <script src="js/form.js"></script>
+  <script src="js/formmodule.js"></script>
   <script src="js/backend.js"></script>
   <script src="js/move.js"></script>
-  <script src="js/debounce.js"></script>
   <script src="js/main.js"></script>
 </body>
 </html>
