Делает дополнительные исправления после первой проверки

--- a/index.html
+++ b/index.html
@@ -253,11 +253,11 @@
   <script src="js/debounce.js"></script>
   <script src="js/data.js"></script>
   <script src="js/message.js"></script>
-  <script src="js/cardmodule.js"></script>
-  <script src="js/filtermodule.js"></script>
-  <script src="js/pinmodule.js"></script>
+  <script src="js/card-module.js"></script>
+  <script src="js/filter-module.js"></script>
+  <script src="js/pin-module.js"></script>
   <script src="js/avatar.js"></script>
-  <script src="js/formmodule.js"></script>
+  <script src="js/form-module.js"></script>
   <script src="js/backend.js"></script>
   <script src="js/move.js"></script>
   <script src="js/main.js"></script>
